13th and 14th user story

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </nav>
 
   <div class="embed-responsive embed-responsive-16by9"  id="video">
-    <iframe style="width: 50vw; height: 400px;" class="embed-responsive-item" src="https://www.youtube.com/embed/GdOEQv-zQVw" allowfullscreen></iframe>
+    <iframe class="video-frame embed-responsive-item" src="https://www.youtube.com/embed/GdOEQv-zQVw" allowfullscreen></iframe>
   </div>
 
   <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
